apache/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom
  labels:
    app: custom
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec:
      containers:
      - name: custom
        image: dockerlearn2020devops/custom-apache:latest
        ports:
        - containerPort: 80
