apache/custom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: custom
  name: custom
spec:
  ports:
  - name: custom
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: custom
  type: ClusterIP
status:
  loadBalancer: {}
